<resources>
    <!-- \u0020 = space -->
    <string name="app_name">Personal App</string>
    <!-- Lucky Dice Activity -->
    <string name="dice_number_1">⚀</string>
    <string name="dice_number_2">⚁</string>
    <string name="dice_number_3">⚂</string>
    <string name="dice_number_4">⚃</string>
    <string name="dice_number_5">⚄</string>
    <string name="dice_number_6">⚅</string>
    <!-- Currency Activity -->
    <string name="warn_digit_only">Digits ONLY.</string>
    <!-- QR Code Activity -->
    <string name="button_gen_qrcode">Generate QR Code</string>
    <string name="button_read_image">Read QR Code From Image</string>
    <string name="hint_string_input">String Input</string>
    <string name="dialog_title_utm">UTM track code found</string>
    <string name="dialog_msg_utm">Do you want to remove utm parameter in the url?</string>
    <string name="dialog_title_safe_browsing">THREATS FOUND via Google Safe Browsing API</string>
    <string name="dialog_msg_safe_browsing">[NO]Discard and Back(HIGHLY RECOMMENDED) \n[YES]Go into the url AS YOUR OWN RISK.</string>
    <!-- Notes Activity -->
    <string name="grid_menu_delete">DELETE</string>
    <string name="dialog_delete_title">DELETE record in database</string>
    <string name="dialog_delete_msg">NO UNDO \n\nAre you sure?</string>
    <string name="dialog_switch_paint_title">Switch to Painting.</string>
    <string name="dialog_switch_paint_msg">Everything will be discard. \n\nAre you sure?</string>
    <string name="display_stroke_width">Stroke Width: </string>
    <string name="menu_clean">CLEAN ALL</string>
    <string name="menu_color">Color</string>
    <string name="menu_color_picker">Color Picker</string>
    <string name="menu_argb_input">ARGB Input</string>
    <string name="menu_stroke_width">Stroke Width</string>
    <string name="menu_stroke_style">Stroke Style</string>
    <string name="menu_style_stroke">Paint.Style.STROKE</string>
    <string name="menu_style_fill">Paint.Style.FILL</string>
    <string name="menu_style_fill_stroke">Paint.Style.FILL_AND_STROKE</string>
    <string name="menu_special">Special</string>
    <string name="menu_special_emboss">Emboss</string>
    <string name="menu_special_blur">Blur</string>
    <string name="menu_special_erase">Erase</string>SrcATop
    <string name="menu_special_srcatop">SrcATop</string>
    <string name="menu_save">Save to local</string>
    <string name="dialog_switch_text_title">Switch to Typing.</string>
    <string name="dialog_switch_text_msg">Everything will be discard. \n\nAre you sure?</string>
    <string name="dialog_argb_title">ARGB Input(0–255):\u0020</string>
    <string name="dialog_save_title">File name: </string>
    <string name="text_last_edit">Last Edit:\u0020</string>
    <!-- Common -->
    <string name="dialog_positive">YES</string>
    <string name="dialog_negative">NO</string>
    <string name="dialog_negative_cancel">CANCEL</string>

    <!-- Layout xml -->
    <string name="row_cancel">❎</string>
    <!-- Main Menu Activity -->
    <string name="fab_text_menu_translate">Translate</string>
    <string name="fab_text_menu_check_cur">Check Currency</string>
    <string name="fab_text_menu_qr_code">QR Code Scanner</string>
    <string name="fab_text_menu_notes">Jot Notes</string>
    <string name="fab_text_menu_setting">App Setting</string>
    <!-- Currency Activity -->
    <string name="input_cur_code_name">Currency Code/Currency Name</string>
    <string name="button_cur_cal">CAL!</string>
    <string name="input_cur_search">Search</string>
    <string name="input_cur_amount">Amount</string>
    <!-- Dice Activity -->
    <string name="switch_dice_hide">HIDE</string>
    <string name="switch_dice_order">ORDER</string>
    <string name="switch_dice_shake">SHAKE</string>
    <string name="button_dice_unlock">UNLOCK</string>
    <string name="button_dice_roll">ROLL</string>
    <!-- Notes Activity -->
    <string name="input_note_hint_title">Title: </string>
    <string name="text_lock_pin">[ 🔒 : 🔢 ]</string>
    <string name="text_lock_fp">[ 🔒 : 👆 ]</string>
    <string name="text_lock_pin_fp">[ 🔒 : 🔢 + 👆 ]</string>
    <string name="button_save_submit">Save &amp; upload</string>
    <string name="button_save_submit_pin">[🔒:🔢] Save &amp; submit</string>
    <string name="button_save_submit_fp">[🔒:👆] Save &amp; submit</string>
    <string name="button_save_submit_pin_fp">[🔒: 🔢+👆] Save &amp; submit</string>
    <string name="input_note_hint_search">Search Title: </string>
    <string name="input_task">Task</string>
    <string name="toggle_task_on">⭕️</string>
    <string name="toggle_task_off">❌</string>
    <string name="fab_text_notes_search">Search</string>
    <string name="fab_text_notes_new">New</string>
    <string name="fab_text_notes_firebase">Firebase</string>
    <!-- note_tools_layout -->
    <string name="button_note_tools_more">&#128316;</string>
    <string name="button_note_tools_switch">🔄</string>
    <!-- Layout xml -->
    <!-- note_pin_input -->
    <string name="text_note_pin_msg">Input you pin below:</string>
    <string name="input_note_pin_hint">PIN</string>
    <!-- App Setting Menu Popup -->
    <!-- Setting Selection -->
    <string name="menu_setting_mongodb">MongoDB Setting</string>
    <string name="menu_setting_firebase">Firebase Setting</string>
    <string name="menu_setting_google_api">Google API Setting</string>
    <string name="text_setting_prompt">! Invalid input found and highlighted !</string>
    <string name="text_setting_info">INFO: Press SAVE will also perform Authentication.</string>
    <string name="btn_setting_save">SAVE</string>
    <string name="btn_setting_clear">CLEAR</string>
    <!-- MongoDB Setting -->
    <string name="text_setting_mongodb_api_key">mongoDB.auth.api.key</string>
    <string name="text_setting_mongodb_api_key_desc">(For authenticating users. Cannot use notes function otherwise)</string>
    <string name="text_setting_mongodb_app_id">mongoDB.appId</string>
    <string name="text_setting_mongodb_app_id_desc">(Enter your MongoDB Realm Applications ID below)</string>
    <string name="text_setting_mongodb_client">mongoDB.client</string>
    <string name="text_setting_mongodb_client_desc">(Using mongodb-atlas mostly)</string>
    <string name="text_setting_mongodb_database">mongoDB.database</string>
    <string name="text_setting_mongodb_database_desc">(Enter your Database name below)</string>
    <string name="text_setting_mongodb_collection_notes">mongoDB.collection.notes</string>
    <string name="text_setting_mongodb_collection_notes_desc">(Collection name inside the Database for storing notes)</string>
    <string name="text_setting_mongodb_collection_key">mongoDB.collection.key</string>
    <string name="text_setting_mongodb_collection_key_desc">(Collection name inside the Database for storing key)</string>
    <!-- Firebase Setting -->
    <string name="text_setting_firebase_common_desc">(found in Firebase project setting)</string>
    <string name="text_setting_firebase_project_id">Project ID</string>
    <string name="text_setting_firebase_app_id">Application ID</string>
    <string name="text_setting_firebase_api_key">API Key</string>
    <string name="text_setting_firebase_instance_url">Instance URL</string>
    <string name="text_setting_firebase_instance_url_desc">(your realtime database url)</string>
    <string name="text_setting_firebase_child_notes">Notes child name</string>
    <string name="text_setting_firebase_child_notes_desc">(child name of note)</string>
    <string name="text_setting_firebase_child_key">Key child name</string>
    <string name="text_setting_firebase_child_key_desc">(child name of key)</string>
    <string name="text_setting_firebase_info">Make sure Anonymous Authentication is enabled</string>
    <!-- Google API Setting -->
    <string name="text_setting_google_api_key">google.safe.browsing.api.key</string>
    <string name="text_setting_google_api_key_desc">(For QR scanning threat detection)</string>
    <string name="text_setting_google_api_info">INFO: Leave empty will NOT affect QR Code function</string>
    <!-- Done Popup -->
    <string name="text_done_done">DONE</string>
    <string name="text_done_dismiss">Tap to dismiss</string>
    <!-- Fragment menu -->
    <string name="text_search_fragment_menu">Search</string>
</resources>