<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:background="@drawable/common_table_border"
    app:layout_constraintTop_toTopOf="parent">

    <ToggleButton
        android:textOn="@string/toggle_task_on"
        android:textOff="@string/toggle_task_off"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.14"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.72"
        android:hint="@string/input_task"
        android:padding="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.14"
        android:background="@android:color/transparent"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/row_cancel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />
</TableRow>