<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#CC000000"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="2dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="@drawable/simple_view_corner_radius">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="6dp"
                android:gravity="center"
                android:text="@string/menu_setting_firebase"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:padding="4dp"
                android:text="Project ID"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/text_setting_firebase_common_desc"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settingFirebaseProjectId"
                android:inputType="text"
                android:padding="2dp"
                android:textSize="14sp"
                android:background="@drawable/view_underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="4dp"
                android:text="@string/text_setting_firebase_app_id" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/text_setting_firebase_common_desc"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settingFirebaseAppId"
                android:inputType="text"
                android:padding="2dp"
                android:textSize="14sp"
                android:background="@drawable/view_underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="4dp"
                android:text="@string/text_setting_firebase_api_key"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/text_setting_firebase_common_desc"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settingFirebaseApiKey"
                android:inputType="text"
                android:padding="2dp"
                android:textSize="14sp"
                android:background="@drawable/view_underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="4dp"
                android:text="@string/text_setting_firebase_instance_url"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/text_setting_firebase_instance_url_desc"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settingFirebaseInstanceUrl"
                android:inputType="text"
                android:padding="2dp"
                android:textSize="14sp"
                android:background="@drawable/view_underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="4dp"
                android:text="@string/text_setting_firebase_child_notes"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/text_setting_firebase_child_notes_desc"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settingChildNotes"
                android:inputType="text"
                android:padding="2dp"
                android:textSize="14sp"
                android:background="@drawable/view_underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="4dp"
                android:text="@string/text_setting_firebase_child_key"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/text_setting_firebase_child_key_desc"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settingChildKey"
                android:inputType="text"
                android:padding="2dp"
                android:textSize="14sp"
                android:background="@drawable/view_underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/settingPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:textSize="12sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:gravity="center"
                android:text="@string/text_setting_prompt"/>

            <TextView
                android:id="@+id/settingInfo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:gravity="center"
                android:text="@string/text_setting_info"/>
            <TextView
                android:id="@+id/settingInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:gravity="center"
                android:text="@string/text_setting_firebase_info"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/settingSaveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/simple_button_click_effect"
                    android:layout_margin="2dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/btn_setting_save"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/settingClearBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/simple_button_click_effect"
                    android:layout_margin="2dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/btn_setting_clear" />
                <Space
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent" />
                <Button
                    android:id="@+id/settingCancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/simple_button_click_effect"
                    android:layout_margin="2dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@android:string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>