<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/toolsLayout"
    android:weightSum="1"
    app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/moreActionNotesButton"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:text="@string/button_note_tools_more"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4" />

        <Button
            android:id="@+id/submitNotesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_submit"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:layout_weight="0.9"/>

        <Button
            android:id="@+id/switchNotesButton"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/button_note_tools_switch"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:layout_weight="0.05"/>

</LinearLayout>